added gameXForked test

--- a/.env
+++ b/.env
@@ -1,14 +1,8 @@
-ETHEREUM_SEPOLIA_RPC_URL = BSlcsNBVCXl_UnwgV14AjjOyDmb78dDk
-ARBITRUM_SEPOLIA_RPC_URL = rXArEFiGQMZs7Cesy1B4v6aH1e3bMqTl
+
+ETHEREUM_SEPOLIA_RPC_URL ="https://eth-sepolia.g.alchemy.com/v2/urQYwAh7Y5isCzMS--7ltslFQXAhGHYc"
+ARBITRUM_SEPOLIA_RPC_URL ="https://arb-sepolia.g.alchemy.com/v2/urQYwAh7Y5isCzMS--7ltslFQXAhGHYc"
 
 
-POLYGON_MAINNET_RPC = 
-
-
-
-PRIVATE_KEY=""
-ETHEREUM_SEPOLIA_RPC_URL=""
-AVALANCHE_FUJI_RPC_URL=""
 
 
 
